# etl-and-analysis-financial-data

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  run_pipeline.py
app/application/use_cases/: __init__.py  analysis.py  build_warehouse.py  run_analysis.py  warehouse.py
app/config/: __init__.py  config.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  client.py  transaction.py
app/domain/value_objects/: __init__.py  money.py
app/infrastructure/analysis/: __init__.py  forecasting.py  report_service.py  visualization.py
app/infrastructure/data_cleaning/: __init__.py  client_cleaner.py  interfaces.py  transaction_cleaner.py
app/infrastructure/data_loading/: __init__.py  excel_loader.py  factories.py  interfaces.py  json_loader.py
app/infrastructure/database/: __init__.py  models.py  repository.py  warehouse.py
app/infrastructure/logger/: __init__.py  decorators.py  enums.py  handlers.py  interfaces.py  manager.py  processors.py  renderers.py
app/utils/: __init__.py  datetime_helpers.py  metaclasses.py
reports/report_20260223_031217/: REPORT.md
reports/report_20260223_031217/report_metadata/: analysis_report.html
reports/report_20260224_035903/: REPORT.md
reports/report_20260224_035903/report_metadata/: analysis_report.html  analysis_results_20260224_035907.json
reports/report_20260303_093200/: REPORT.md
reports/report_20260303_093200/report_metadata/: analysis_report.html  analysis_results_20260303_093203.json
